--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <div class="left">
         <img src="photo-1757269746970-dc477517268f.avif" class="eagle">
+        <div class="absolute">
+            <img src="odin-lined.png">
+            <p>ODIN</p>
+        </div>
     </div>
     <div class="right">
         <div class="top">
@@ -20,17 +24,38 @@
             <div>You <em>know</em> you want to.</div>
         </div>
             <div class="middle">
+                <p>Let's do this!</p>
                 <form action="yee" class="form">
-                    <label for="first-name">First Name</label>
-                    <input for="first-name" name="first-name">
-                    <label for="last-name">Last Name</label>
-                    <input for="last-name" name="last-name">
-                    <label for="email">Email</label>
-                    <input type="email" name="email">
-                    <label for="password">Password</label>
-                    <input type="password" name="password">
-                    <label for="confirm-password">Confirm Password</label>
-                    <input type="password" name="confirm-password">
+
+                    <div class="input-group">
+                        <label for="first-name">First Name</label>
+                        <input id="first-name" name="first-name">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="last-name">Last Name</label>
+                        <input id="last-name" name="last-name">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="email">Email</label>
+                        <input id="email" type="email" name="email">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="phone-number" name="phone-number">Phone Number</label>
+                        <input id="phone-number" type="phone-number" name="phone-number">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="password">Password</label>
+                        <input id="phone-number" type="password" name="password">
+                    </div>
+
+                    <div class="input-group">
+                        <label for="confirm-password">Confirm Password</label>
+                        <input id="phone-number" type="password" name="confirm-password">
+                    </div>
                 </form>
             </div>
             <div class="bottom">
