--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="left">
-        <img src="photo-1757269746970-dc477517268f.avif" class="eagle">
+        <img src="images/galaxy.avif" class="galaxy">
         <div class="absolute">
-            <img src="odin-lined.png">
+            <img src="images/odin-lined.png" class="odin">
             <p>ODIN</p>
+        </div>
+        <div class="caption">
+            <p>Image by Steve Busch on Unsplash</p>
         </div>
     </div>
     <div class="right">
@@ -44,17 +47,17 @@
 
                     <div class="input-group">
                         <label for="phone-number" name="phone-number">Phone Number</label>
-                        <input id="phone-number" type="phone-number" name="phone-number">
+                        <input id="phone-number" type="tel" name="phone-number">
                     </div>
 
                     <div class="input-group">
                         <label for="password">Password</label>
-                        <input id="phone-number" type="password" name="password">
+                        <input id="password" type="password" name="password">
                     </div>
 
                     <div class="input-group">
                         <label for="confirm-password">Confirm Password</label>
-                        <input id="phone-number" type="password" name="confirm-password">
+                        <input id="confirm-password" type="password" name="confirm-password">
                     </div>
                 </form>
             </div>
