--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="bottom">
                 <button class="account">Create Account</button>
                 <div>
-                    Already have an account? Log in
+                    Already have an account? <a href="index.html">Log in</a>
                 </div>
             </div>
     </div>
