--- a/index.html
+++ b/index.html
@@ -32,32 +32,32 @@
 
                     <div class="input-group">
                         <label for="first-name">First Name</label>
-                        <input id="first-name" name="first-name">
+                        <input id="first-name" name="first-name" placeholder="John" required>
                     </div>
 
                     <div class="input-group">
                         <label for="last-name">Last Name</label>
-                        <input id="last-name" name="last-name">
+                        <input id="last-name" name="last-name" placeholder="Smith" required>
                     </div>
 
                     <div class="input-group">
                         <label for="email">Email</label>
-                        <input id="email" type="email" name="email">
+                        <input id="email" type="email" name="email" placeholder="example@gmail.com" required>
                     </div>
 
                     <div class="input-group">
                         <label for="phone-number" name="phone-number">Phone Number</label>
-                        <input id="phone-number" type="tel" name="phone-number">
+                        <input id="phone-number" type="tel" name="phone-number" placeholder="676-676-6767" required>
                     </div>
 
                     <div class="input-group">
                         <label for="password">Password</label>
-                        <input id="password" type="password" name="password">
+                        <input id="password" type="password" name="password" required>
                     </div>
 
                     <div class="input-group">
                         <label for="confirm-password">Confirm Password</label>
-                        <input id="confirm-password" type="password" name="confirm-password">
+                        <input id="confirm-password" type="password" name="confirm-password" required>
                     </div>
                 </form>
             </div>
